--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     --primario: #9C27B0;
     --primarioOscuro: #891190;
     --secundario: #FFCE00;
-    --secundarioOscuro: #rgb(233,287,2);
+    --secundarioOscuro: rgb(233, 187, 2);
     --blanco: #FFF;
     --negro: #000;
 
@@ -36,7 +36,7 @@ a{
 }
 
 img{
-    max-width: 100%; /*toma el tamaño mazimo del elemento */
+    width: 100%; /*toma el tamaño mazimo del elemento */
 }
 
 .contenedor {
@@ -131,14 +131,6 @@ h3 {
     padding: 1rem;
 }
 
-.producto__imagen {
-    width: 100%;
-}
-
-.producto__informacion {
-
-}
-
 .producto__nombre {
  font-size: 4rem;
 }
@@ -184,3 +176,98 @@ h3 {
     }
 }
 
+/** Nosotros*/
+
+.nosotros {
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+}
+
+@media (min-width: 768px) {
+    .nosotros {
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+
+.nosotros__imagen {
+    grid-row: 1 / 2;
+}
+
+@media (min-width: 768px) {
+    .nosotros__imagen {
+        grid-column: 2 / 3;
+    }
+}
+
+/* Bloques */
+
+.bloques {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+
+@media (min-width: 768px) {
+    .bloques {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+.bloque {
+    text-align: center;
+}
+
+.bloque__imagen {
+    max-width: 100%;
+}
+.bloque__titulo {
+    margin: 0;
+}
+
+/** Página del producto **/
+.camisa {
+    padding: 2rem;
+    /** Para que todo el contenido se despegue un poco en la vista móvil **/
+}
+
+@media (min-width: 768px) {
+    .camisa {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+
+.formulario {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+
+.formulario__campo {
+    border: 1rem solid var(--primarioOscuro);
+    background-color: transparent;
+    color: var(--blanco);
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1rem;
+    appearance: none;
+    min-width: 50%;
+    /** Aquí sucede la magia de los input **/
+}
+
+.formulario__submit {
+    background-color: var(--secundario);
+    border: none;
+    font-size: 2rem;
+    font-family: var(--fuentePrincipal);
+    padding: 2rem;
+    transition: background-color .5s ease;
+    grid-column: 1 / 3;
+}
+
+.formulario__submit:hover {
+    cursor: pointer;
+    background-color: var(--secundarioOscuro);
+}
